--- a/home.html
+++ b/home.html
@@ -51,6 +51,11 @@
 			</div>
 		</div>
 
+		<div class="option noHighlight checked visibility" data-option="hideComments">
+			<span class="checkBox icon-"></span>
+			<span class="description">Hide Comments</span>
+		</div>
+
 		<div class="option noHighlight checked" data-option="disablePlaylists">
 			<span class="checkBox icon-"></span>
 			<span class="description">Disable Playlists</span>
@@ -71,7 +76,7 @@
 
 
 	<div class="donate centerText">
-		<div><em>Good Karma for a Year!</em></div>
+		<div><em>Good Karma for the Week!</em></div>
 		<a class="inlineBlock prettyBlueButton" href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=calkuta%40gmail%2ecom&lc=US&item_name=DF%20YouTube&amount=1%2e00&currency_code=USD&no_note=0&bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHostedGuest" target="_blank">Chip In $1</a>
 	</div>
 
