Added fields to feedback form

--- a/leave_feedback.html
+++ b/leave_feedback.html
@@ -15,6 +15,13 @@
 	<h4 class="centerText">Your Feedback is Appreciated!</h4>
 	
 	<form class="leaveFeedback">
+		<label for="name" class="">Name (optional)</label>
+		<input type="text" name="name" class="" id="name" />
+		
+		<label for="email" class="">Email (optional)</label>
+		<input type="text" name="email" class="" id="email" />
+
+		<label for="content" class="">Comments</label>
 		<textarea class="block" rows="8" name="content"></textarea>
 		<input class="prettyBlueButton submit" type="button" name="submit" id="submit" value="Submit" />
 		<div class="message"></div>
