new donation link, large screen compatibility

--- a/home.html
+++ b/home.html
@@ -77,7 +77,7 @@
 
 	<div class="donate centerText">
 		<div><em>Good Karma for the Week!</em></div>
-		<a class="inlineBlock prettyBlueButton" href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=calkuta%40gmail%2ecom&lc=US&item_name=DF%20YouTube&amount=1%2e00&currency_code=USD&no_note=0&bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHostedGuest" target="_blank">Chip In $1</a>
+		<a class="inlineBlock prettyBlueButton" href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=calkuta%40gmail%2ecom&lc=US&no_note=0&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHostedGuest" target="_blank">Chip In a $</a>
 	</div>
 
 </div>
