--- a/home.html
+++ b/home.html
@@ -5,14 +5,14 @@
 	<link rel="stylesheet" type="text/css" href="css/common.css" />
 	<link rel="stylesheet" type="text/css" href="css/fonts.css" />
 	<link rel="stylesheet" type="text/css" href="css/home.css" />
-	<script type="text/javascript" src="scripts/jquery.js"></script>
+	<script type="text/javascript" src="scripts/jquery-3.3.1.min.js"></script>
 	<script type="text/javascript" src="scripts/home.js"></script>
 </head>
 
 <body>
 <div id="content" class="hidden">
-	<h3 class="centerText">DF YouTube</h3>
-	<div class="centerText">(Distraction Free)</div>
+	<h3 class="centerText">DF Tube</h3>
+	<div class="centerText">(Distraction Free for YouTube&#8482;)</div>
 	<div class="centerText">
 		<img class="block center" height="64" width="64" src="images/icon_128.png" />
 	</div>
@@ -29,11 +29,45 @@
 	<h4 class="toggleOptions noHighlight centerText"><span class="">+</span>Options</h4>
 
 	<div class="options hidden">
+		<div class="option noHighlight checked visibility" data-option="hideNotificationBell">
+			<span class="checkBox icon-"></span>
+			<span class="description">Hide NotificationBell</span>
+		</div>
+		
 		<div class="option noHighlight checked visibility" data-option="hideFeed">
 			<span class="checkBox icon-"></span>
 			<span class="description">Hide Feed</span>
+
+			<div class="subOption showParentOff">
+				<div class="option noHighlight checked visibility" data-option="hideRecommended">
+					<span class="checkBox icon-"></span>
+					<span class="description">Hide Recommended Videos</span>
+				</div>
+			</div>
 		</div>
 
+		<div class="option noHighlight checked boxed" data-option="disableAutoplay">
+			<span class="checkBox icon-"></span>
+			<span class="description">Disable Autoplay</span>
+		</div>
+		
+		<div class="option noHighlight checked visibility" data-option="hideTrending">
+			<span class="checkBox icon-"></span>
+			<span class="description">Hide Trending Tab</span>
+		</div>
+
+		<div class="option noHighlight checked visibility" data-option="hideSubBar">
+			<span class="checkBox icon-"></span>
+			<span class="description">Hide Subscriptions Bar</span>
+
+			<div class="subOption showParentOff">
+				<div class="option noHighlight checked visibility" data-option="hideNonLists">
+					<span class="checkBox icon-"></span>
+					<span class="description">Show Only Library/Lists</span>
+				</div>
+			</div>
+		</div>
+		
 		<div class="option noHighlight checked visibility" data-option="hideRelated">
 			<span class="checkBox icon-"></span>
 			<span class="description">Hide Related Videos (end of video)</span>
@@ -43,12 +77,24 @@
 			<span class="checkBox icon-"></span>
 			<span class="description">Hide Sidebar</span>
 
+			<div class="subOption showAlways">
+				<div class="option noHighlight checked visibility" data-option="hideLiveChat">
+					<span class="checkBox icon-"></span>
+					<span class="description">Hide Live Chat</span>
+				</div>
+			</div>
+
 			<div class="subOption">
 				<div class="option noHighlight checked visibility" data-option="hidePlaylist">
 					<span class="checkBox icon-"></span>
 					<span class="description">Hide Playlists</span>
 				</div>
 			</div>
+		</div>
+
+		<div class="option noHighlight checked visibility" data-option="hideMerch">
+			<span class="checkBox icon-"></span>
+			<span class="description">Hide Merch</span>
 		</div>
 
 		<div class="option noHighlight checked visibility" data-option="hideComments">
@@ -61,8 +107,6 @@
 			<span class="description">Disable Playlists</span>
 		</div>
 
-		<div class="leaveFeedback centerText"><a class="plain" href="/leave_feedback.html" title="Leave Feedback"><span class="icon-uniE602"></span><!-- <br />Leave Feedback --></a></div>
-
 		<!-- <div class="option noHighlight checked" data-option="applyInstantly">
 			<span class="checkBox icon-"></span>
 			<span class="description">Apply New Settings Immediately</span><br />
@@ -74,11 +118,18 @@
 		</div> -->
 	</div>
 
+	<div class="leaveFeedback centerText"><a class="plain" href="/leave_feedback.html" title="Leave Feedback"><span class="icon-uniE602"></span><br />Contact</a></div>
+	
+	<div class="centerText"><a href="/privacy.html">Privacy Policy</a></div>
 
-	<div class="donate centerText">
-		<div><em>Good Karma for the Week!</em></div>
-		<a class="inlineBlock prettyBlueButton" href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=calkuta%40gmail%2ecom&lc=US&no_note=0&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHostedGuest" target="_blank">Chip In a $</a>
+	<!-- <div class="donate centerText">
+		<div><em>Your donations make me feel appreciated!</em></div>
+		<a class="inlineBlock prettyBlueButton" href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=calkuta%40gmail%2ecom&lc=US&no_note=0&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHostedGuest" target="_blank">Thank You</a>
 	</div>
+	
+	<br>
+	<h5 class="centerText">Also Try:</h5>
+	<a class="block centerText" target="_blank" href="https://chrome.google.com/webstore/detail/df-netflix-description-fr/hjgnnkmplelcdniigmildomalioamdbd">DF Netflix (<b>Description</b> Free)</a> -->
 
 </div>
 </body>
