hide home, shorts tabs; rename trending to explore

--- a/home.html
+++ b/home.html
@@ -10,119 +10,131 @@
 </head>
 
 <body>
-<div id="content" class="hidden">
-	<h3 class="centerText">DF Tube</h3>
-	<div class="centerText">(Distraction Free for YouTube&#8482;)</div>
-	<div class="centerText">
-		<img class="block center" height="64" width="64" src="images/icon_128.png" />
-	</div>
-
-	<div class="setActive">
-		<div class="deactivate">
-			<span class="redButton">Deactivate</span>
+	<div id="content" class="hidden">
+		<h3 class="centerText">DF Tube</h3>
+		<div class="centerText">(Distraction Free for YouTube&#8482;)</div>
+		<div class="centerText">
+			<img class="block center" height="64" width="64" src="images/icon_128.png" />
 		</div>
-		<div class="activate">
-			<span class="greenButton">Activate</span>
-		</div>
-	</div>
 
-	<h4 class="toggleOptions noHighlight centerText"><span class="">+</span>Options</h4>
-
-	<div class="options hidden">
-		<div class="option noHighlight checked visibility" data-option="hideNotificationBell">
-			<span class="checkBox icon-"></span>
-			<span class="description">Hide NotificationBell</span>
-		</div>
-		
-		<div class="option noHighlight checked visibility" data-option="hideFeed">
-			<span class="checkBox icon-"></span>
-			<span class="description">Hide Feed</span>
-
-			<div class="subOption showParentOff">
-				<div class="option noHighlight checked visibility" data-option="hideRecommended">
-					<span class="checkBox icon-"></span>
-					<span class="description">Hide Recommended Videos</span>
-				</div>
+		<div class="setActive">
+			<div class="deactivate">
+				<span class="redButton">Deactivate</span>
+			</div>
+			<div class="activate">
+				<span class="greenButton">Activate</span>
 			</div>
 		</div>
 
-		<div class="option noHighlight checked boxed" data-option="disableAutoplay">
-			<span class="checkBox icon-"></span>
-			<span class="description">Disable Autoplay</span>
-		</div>
-		
-		<div class="option noHighlight checked visibility" data-option="hideTrending">
-			<span class="checkBox icon-"></span>
-			<span class="description">Hide Trending Tab</span>
-		</div>
+		<h4 class="toggleOptions noHighlight centerText"><span class="">+</span>Options</h4>
 
-		<div class="option noHighlight checked visibility" data-option="hideSubBar">
-			<span class="checkBox icon-"></span>
-			<span class="description">Hide Subscriptions Bar</span>
-
-			<div class="subOption showParentOff">
-				<div class="option noHighlight checked visibility" data-option="hideNonLists">
-					<span class="checkBox icon-"></span>
-					<span class="description">Show Only Library/Lists</span>
-				</div>
+		<div class="options hidden">
+			<div class="option noHighlight checked visibility" data-option="hideNotificationBell">
+				<span class="checkBox icon-"></span>
+				<span class="description">Hide NotificationBell</span>
 			</div>
-		</div>
-		
-		<div class="option noHighlight checked visibility" data-option="hideRelated">
-			<span class="checkBox icon-"></span>
-			<span class="description">Hide Related Videos (end of video)</span>
-		</div>
 
-		<div class="option noHighlight checked visibility" data-option="hideSidebar">
-			<span class="checkBox icon-"></span>
-			<span class="description">Hide Sidebar</span>
+			<div class="option noHighlight checked visibility" data-option="hideFeed">
+				<span class="checkBox icon-"></span>
+				<span class="description">Hide Feed</span>
 
-			<div class="subOption showAlways">
-				<div class="option noHighlight checked visibility" data-option="hideLiveChat">
-					<span class="checkBox icon-"></span>
-					<span class="description">Hide Live Chat</span>
+				<div class="subOption showParentOff">
+					<div class="option noHighlight checked visibility" data-option="hideRecommended">
+						<span class="checkBox icon-"></span>
+						<span class="description">Hide Recommended Videos</span>
+					</div>
 				</div>
 			</div>
 
-			<div class="subOption">
-				<div class="option noHighlight checked visibility" data-option="hidePlaylist">
-					<span class="checkBox icon-"></span>
-					<span class="description">Hide Playlists</span>
+			<div class="option noHighlight checked boxed" data-option="disableAutoplay">
+				<span class="checkBox icon-"></span>
+				<span class="description">Disable Autoplay</span>
+			</div>
+
+			<div class="option noHighlight checked visibility" data-option="hideHome">
+				<span class="checkBox icon-"></span>
+				<span class="description">Hide Home Tab</span>
+			</div>
+
+
+			<div class="option noHighlight checked visibility" data-option="hideTrending">
+				<span class="checkBox icon-"></span>
+				<span class="description">Hide Explore Tab</span>
+			</div>
+
+			<div class="option noHighlight checked visibility" data-option="hideShorts">
+				<span class="checkBox icon-"></span>
+				<span class="description">Hide Shorts Tab</span>
+			</div>
+
+			<div class="option noHighlight checked visibility" data-option="hideSubBar">
+				<span class="checkBox icon-"></span>
+				<span class="description">Hide Subscriptions Bar</span>
+
+				<div class="subOption showParentOff">
+					<div class="option noHighlight checked visibility" data-option="hideNonLists">
+						<span class="checkBox icon-"></span>
+						<span class="description">Show Only Library/Lists</span>
+					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="option noHighlight checked visibility" data-option="hideMerch">
-			<span class="checkBox icon-"></span>
-			<span class="description">Hide Merch</span>
-		</div>
+			<div class="option noHighlight checked visibility" data-option="hideRelated">
+				<span class="checkBox icon-"></span>
+				<span class="description">Hide Related Videos (end of video)</span>
+			</div>
 
-		<div class="option noHighlight checked visibility" data-option="hideComments">
-			<span class="checkBox icon-"></span>
-			<span class="description">Hide Comments</span>
-		</div>
+			<div class="option noHighlight checked visibility" data-option="hideSidebar">
+				<span class="checkBox icon-"></span>
+				<span class="description">Hide Sidebar</span>
 
-		<div class="option noHighlight checked" data-option="disablePlaylists">
-			<span class="checkBox icon-"></span>
-			<span class="description">Disable Playlists</span>
-		</div>
+				<div class="subOption showAlways">
+					<div class="option noHighlight checked visibility" data-option="hideLiveChat">
+						<span class="checkBox icon-"></span>
+						<span class="description">Hide Live Chat</span>
+					</div>
+				</div>
 
-		<!-- <div class="option noHighlight checked" data-option="applyInstantly">
+				<div class="subOption">
+					<div class="option noHighlight checked visibility" data-option="hidePlaylist">
+						<span class="checkBox icon-"></span>
+						<span class="description">Hide Playlists</span>
+					</div>
+				</div>
+			</div>
+
+			<div class="option noHighlight checked visibility" data-option="hideMerch">
+				<span class="checkBox icon-"></span>
+				<span class="description">Hide Merch</span>
+			</div>
+
+			<div class="option noHighlight checked visibility" data-option="hideComments">
+				<span class="checkBox icon-"></span>
+				<span class="description">Hide Comments</span>
+			</div>
+
+			<div class="option noHighlight checked" data-option="disablePlaylists">
+				<span class="checkBox icon-"></span>
+				<span class="description">Disable Playlists</span>
+			</div>
+
+			<!-- <div class="option noHighlight checked" data-option="applyInstantly">
 			<span class="checkBox icon-"></span>
 			<span class="description">Apply New Settings Immediately</span><br />
 			<span class="block centerText">(increases distraction!)</span>
 		</div> -->
 
-		<!-- <div class="refresh">
+			<!-- <div class="refresh">
 			Refresh to apply changes
 		</div> -->
-	</div>
+		</div>
 
-	<div class="leaveFeedback centerText"><a class="plain" href="/leave_feedback.html" title="Leave Feedback"><span class="icon-uniE602"></span><br />Contact</a></div>
-	
-	<div class="centerText"><a href="/privacy.html">Privacy Policy</a></div>
+		<div class="leaveFeedback centerText"><a class="plain" href="/leave_feedback.html" title="Leave Feedback"><span
+					class="icon-uniE602"></span><br />Contact</a></div>
 
-	<!-- <div class="donate centerText">
+		<div class="centerText"><a href="/privacy.html">Privacy Policy</a></div>
+
+		<!-- <div class="donate centerText">
 		<div><em>Your donations make me feel appreciated!</em></div>
 		<a class="inlineBlock prettyBlueButton" href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=calkuta%40gmail%2ecom&lc=US&no_note=0&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHostedGuest" target="_blank">Thank You</a>
 	</div>
@@ -131,7 +143,7 @@
 	<h5 class="centerText">Also Try:</h5>
 	<a class="block centerText" target="_blank" href="https://chrome.google.com/webstore/detail/df-netflix-description-fr/hjgnnkmplelcdniigmildomalioamdbd">DF Netflix (<b>Description</b> Free)</a> -->
 
-</div>
+	</div>
 </body>
 
 </html>
